NXP-32648: Remove nuxeo-java-client usage