@@ -19,12 +19,13 @@
  */
 package org.nuxeo.ftest.server.hotreload;
 
+import static org.apache.http.HttpStatus.SC_FORBIDDEN;
+import static org.apache.http.HttpStatus.SC_NO_CONTENT;
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertFalse;
 import static org.junit.Assert.assertNotNull;
 import static org.junit.Assert.assertNull;
 import static org.junit.Assert.assertTrue;
-import static org.junit.Assert.fail;
 import static org.junit.Assume.assumeTrue;
 import static org.nuxeo.functionaltests.AbstractTest.NUXEO_URL;
 
@@ -32,17 +33,20 @@ import java.io.File;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.util.Collections;
+import java.time.Duration;
 import java.util.HashMap;
 import java.util.Map;
 
+import javax.ws.rs.core.MediaType;
+
 import org.junit.Rule;
 import org.junit.Test;
-import org.nuxeo.client.NuxeoClient.Builder;
-import org.nuxeo.client.objects.Repository;
-import org.nuxeo.client.spi.NuxeoClientRemoteException;
 import org.nuxeo.ecm.core.test.StorageConfiguration;
-import org.nuxeo.functionaltests.RestHelper;
+import org.nuxeo.ecm.restapi.test.JsonNodeHelper;
+import org.nuxeo.functionaltests.RestTestRule;
+import org.nuxeo.http.test.HttpClientTestRule;
+import org.nuxeo.http.test.handler.HttpStatusCodeHandler;
+import org.nuxeo.http.test.handler.JsonNodeHandler;
 
 /**
  * Tests the dev hot reload.
@@ -51,21 +55,36 @@ import org.nuxeo.functionaltests.RestHelper;
  */
 public class ITDevHotReloadTest {
 
+    protected final HttpClientTestRule httpClient = HttpClientTestRule.builder()
+                                                                      .url(NUXEO_URL)
+                                                                      .adminCredentials()
+                                                                      .accept(MediaType.APPLICATION_JSON)
+                                                                      .contentType(MediaType.APPLICATION_JSON)
+                                                                      // for hot reload
+                                                                      .timeout(Duration.ofMinutes(2))
+                                                                      .header("X-NXproperties", "*")
+                                                                      .build();
+
+    protected final RestTestRule restHelper = new RestTestRule(httpClient);
+
     @Rule
-    public final HotReloadTestRule hotReloadRule = new HotReloadTestRule();
+    public final HotReloadTestRule hotReloadRule = new HotReloadTestRule(restHelper);
 
     @Test
     public void testEmptyHotReload() {
         hotReloadRule.updateDevBundles("# EMPTY HOT RELOAD");
         // test create a document
-        String id = RestHelper.createDocument("/", "File", "file", "description");
+        String id = restHelper.createDocument("/", "File", "file", Map.of("dc:description", "description"));
         assertNotNull(id);
     }
 
     @Test
+    @SuppressWarnings("unchecked")
     public void testHotReloadVocabulary() {
         // test fetch created entry
-        Map<String, Object> properties = RestHelper.fetchDirectoryEntryProperties("hierarchical", "child2");
+        Map<String, Object> directoryEntry = restHelper.fetchDirectoryEntry("hierarchical", "child2");
+        assertNotNull(directoryEntry);
+        var properties = (Map<String, Object>) directoryEntry.get("properties");
         assertNotNull(properties);
         assertEquals("root1", properties.get("parent"));
         assertEquals("child2", properties.get("label"));
@@ -78,46 +97,45 @@ public class ITDevHotReloadTest {
         assumeTrue("This test only works with VCS", StorageConfiguration.CORE_VCS.equals(storageConf));
         Map<String, Object> parameters = new HashMap<>();
         parameters.put("sequenceName", "hibernateSequencer");
-        RestHelper.operation("javascript.getSequence", parameters);
+        restHelper.operation("javascript.getSequence", parameters);
     }
 
     @Test
     public void testHotReloadDocumentType() {
         // test create a document
-        String id = RestHelper.createDocument("/", "HotReload", "hot reload",
-                Collections.singletonMap("hr:content", "some content"));
+        String id = restHelper.createDocument("/", "HotReload", "hot reload", Map.of("hr:content", "some content"));
         assertNotNull(id);
     }
 
     @Test
     public void testHotReloadLifecycle() {
         // test follow a transition
-        String id = RestHelper.createDocument("/", "File", "file");
-        RestHelper.followLifecycleTransition(id, "to_in_process");
-        RestHelper.followLifecycleTransition(id, "to_archived");
-        RestHelper.followLifecycleTransition(id, "to_draft");
+        String id = restHelper.createDocument("/", "File", "file");
+        restHelper.followLifecycleTransition(id, "to_in_process");
+        restHelper.followLifecycleTransition(id, "to_archived");
+        restHelper.followLifecycleTransition(id, "to_draft");
     }
 
     @Test
     public void testHotReloadStructureTemplate() {
         // test Folder creation trigger a child of type File
-        RestHelper.createDocument("/", "Folder", "folder");
-        assertTrue(RestHelper.documentExists("/folder/File"));
+        restHelper.createDocument("/", "Folder", "folder");
+        assertTrue(restHelper.documentExists("/folder/File"));
 
         // undeploy the bundle
         hotReloadRule.updateDevBundles("# Remove previous bundle for test");
         // test the opposite
-        RestHelper.createDocument("/folder", "Folder", "child");
-        assertFalse(RestHelper.documentExists("/folder/child/File"));
+        restHelper.createDocument("/folder", "Folder", "child");
+        assertFalse(restHelper.documentExists("/folder/child/File"));
     }
 
     @Test
     public void testHotReloadWorkflow() {
         // test start a workflow
-        String id = RestHelper.createDocument("/", "File", "file");
+        String id = restHelper.createDocument("/", "File", "file");
         // our workflow only has one automatic transition to the final node
-        RestHelper.startWorkflowInstance(id, "newWorkflow");
-        assertFalse(RestHelper.documentHasWorkflowStarted(id));
+        restHelper.startWorkflowInstance(id, "newWorkflow");
+        assertFalse(restHelper.documentHasWorkflowStarted(id));
     }
 
     @Test
@@ -126,11 +144,11 @@ public class ITDevHotReloadTest {
         Map<String, Object> parameters = new HashMap<>();
         parameters.put("parentPath", "/");
         parameters.put("docName", "file");
-        RestHelper.operation("CreateDocumentAndStartWorkflow", parameters);
+        restHelper.operation("CreateDocumentAndStartWorkflow", parameters);
         // add the created file to RestHelper context
-        RestHelper.addDocumentToDelete("/file");
+        restHelper.addDocumentToDelete("/file");
         // our document should have a started workflow instance
-        assertTrue(RestHelper.documentHasWorkflowStarted("/file"));
+        assertTrue(restHelper.documentHasWorkflowStarted("/file"));
     }
 
     @Test
@@ -140,12 +158,12 @@ public class ITDevHotReloadTest {
         parameters.put("parentPath", "/");
         int nbChildren = 5;
         parameters.put("nbChildren", Integer.valueOf(nbChildren));
-        RestHelper.operation("javascript.CreateSeveralChild", parameters);
+        restHelper.operation("javascript.CreateSeveralChild", parameters);
         for (int i = 0; i < nbChildren; i++) {
             String childPath = "/file" + i;
-            assertTrue(String.format("Document '%s' doesn't exist", childPath), RestHelper.documentExists(childPath));
+            assertTrue(String.format("Document '%s' doesn't exist", childPath), restHelper.documentExists(childPath));
             // add the created file to RestHelper context
-            RestHelper.addDocumentToDelete(childPath);
+            restHelper.addDocumentToDelete(childPath);
         }
     }
 
@@ -153,54 +171,52 @@ public class ITDevHotReloadTest {
     public void testHotReloadAutomationEventHandler() {
         // test create a Folder to trigger automation event handler
         // this will create a File child
-        RestHelper.createDocument("/", "Folder", "folder");
-        assertTrue(RestHelper.documentExists("/folder/file"));
+        restHelper.createDocument("/", "Folder", "folder");
+        assertTrue(restHelper.documentExists("/folder/file"));
     }
 
     @Test
     public void testHotReloadUserAndGroup() {
         // test fetch userTest and groupTest
-        assertTrue(RestHelper.userExists("userTest"));
-        RestHelper.addUserToDelete("userTest");
+        assertTrue(restHelper.userExists("userTest"));
+        restHelper.deleteUser("userTest");
 
-        assertTrue(RestHelper.groupExists("groupTest"));
-        RestHelper.addGroupToDelete("groupTest");
+        assertTrue(restHelper.groupExists("groupTest"));
+        restHelper.deleteGroup("groupTest");
     }
 
     @Test
     public void testHotReloadPageProvider() {
         // test fetch result of page provider - SELECT * FROM File
-        RestHelper.createDocument("/", "File", "file");
-        int nbDocs = RestHelper.countQueryPageProvider("SIMPLE_NXQL_FOR_HOT_RELOAD_PAGE_PROVIDER");
+        restHelper.createDocument("/", "File", "file");
+        int nbDocs = restHelper.countQueryPageProvider("SIMPLE_NXQL_FOR_HOT_RELOAD_PAGE_PROVIDER");
         assertEquals(1, nbDocs);
     }
 
     @Test
     public void testHotReloadPermission() {
-        RestHelper.createUser("john", "doe");
-        String docId = RestHelper.createDocument("/", "File", "file");
+        restHelper.createUser("john", "doe");
+        String docId = restHelper.createDocument("/", "File", "file");
         // there's no existence check when adding a permission, so we will test to hot reload a new permission which
         // brings the Remove one, add it for john user on /file document and try to delete it
         // in order to be able to do that, john needs to have the RemoveChildren permission on the parent and as
         // CoreSession will resolve the parent, john also needs to have the Read permission on the parent
-        RestHelper.addPermission("/", "john", "Read");
-        RestHelper.addPermission("/", "john", "RemoveChildren");
-        // it's better to keep all NuxeoClient usage in RestHelper, but adding a way to perform requests as another user
-        // than Administrator may add complexity to RestHelper class
-        // as it's the only usage currently, keep it as it for now
-        Repository repository = new Builder().url(NUXEO_URL).authentication("john", "doe").connect().repository();
-        try {
-            repository.deleteDocument(docId);
-            fail("User shouldn't be able to delete the document");
-        } catch (NuxeoClientRemoteException nce) {
-            assertEquals(403, nce.getStatus());
-            assertEquals(String.format("Failed to delete document /file, Permission denied: cannot remove document %s, "
-                    + "Missing permission 'Remove' on document %s", docId, docId), nce.getMessage());
-        }
+        restHelper.addPermission("/", "john", "Read");
+        restHelper.addPermission("/", "john", "RemoveChildren");
+        // try to delete the file with john user
+        httpClient.buildDeleteRequest("/api/v1/id/" + docId)
+                  .credentials("john", "doe")
+                  .executeAndConsume(new JsonNodeHandler(SC_FORBIDDEN), node -> assertEquals(
+                          "Failed to delete document /file, Permission denied: cannot remove document %s, Missing permission 'Remove' on document %s".formatted(
+                                  docId, docId),
+                          JsonNodeHelper.getErrorMessage(node)));
         // there's no check on adding a permission try to delete the file
-        RestHelper.addPermission("/file", "john", "HotReloadRemove");
-        repository.deleteDocument(docId);
-        RestHelper.removeDocumentToDelete(docId);
+        restHelper.addPermission("/file", "john", "HotReloadRemove");
+        httpClient.buildDeleteRequest("/api/v1/id/" + docId)
+                  .credentials("john", "doe")
+                  .executeAndConsume(new HttpStatusCodeHandler(),
+                          status -> assertEquals(SC_NO_CONTENT, status.intValue()));
+        restHelper.removeDocumentToDelete(docId);
     }
 
     @Test
@@ -226,11 +242,11 @@ public class ITDevHotReloadTest {
         hotReloadRule.deployJarDevBundle(ITDevHotReloadTest.class,
                 "_testHotReloadJarFileFactoryFlush/first/jar-to-hot-reload.jar");
         // assert workflow name
-        assertEquals("New Workflow", RestHelper.getWorkflowInstanceTitle("newWorkflow"));
+        assertEquals("New Workflow", restHelper.getWorkflowInstanceTitle("newWorkflow"));
         // deploy second bundle with same jar name and resource change
         hotReloadRule.deployJarDevBundle(ITDevHotReloadTest.class,
                 "_testHotReloadJarFileFactoryFlush/second/jar-to-hot-reload.jar");
-        assertEquals("New Workflow (2)", RestHelper.getWorkflowInstanceTitle("newWorkflow"));
+        assertEquals("New Workflow (2)", restHelper.getWorkflowInstanceTitle("newWorkflow"));
     }
 
     @Test
@@ -243,11 +259,11 @@ public class ITDevHotReloadTest {
         File tempFile = tempPath.toFile();
         String docPath = "/default-domain/" + tempFile.getName();
 
-        RestHelper.operation("FileManager.Import", tempFile, Map.of("currentDocument", "/default-domain"), null);
-        RestHelper.addDocumentToDelete(docPath);
+        restHelper.operation("FileManager.Import", tempFile, Map.of("currentDocument", "/default-domain"), Map.of());
+        restHelper.addDocumentToDelete(docPath);
 
-        String docType = RestHelper.fetchDocumentType(docPath);
-        assertEquals("Foo", docType);
+        var doc = restHelper.fetchDocument(docPath);
+        assertEquals("Foo", doc.get("type"));
     }
 
     /**
@@ -257,17 +273,18 @@ public class ITDevHotReloadTest {
     @SuppressWarnings("unchecked")
     public void testHotReloadMimeTypeIconUpdater() throws IOException {
         // Creates the document and its content.
-        String docId = RestHelper.createDocument("/", "CustomDocType", "myDocument");
+        String docId = restHelper.createDocument("/", "CustomDocType", "myDocument");
         addBlobToDocument(docId, "custom:image", "anyImage", "png");
         addBlobToDocument(docId, "custom:question/image", "anyImage", "png");
         addBlobToDocument(docId, "custom:question/audio", "anySong", "mp3");
 
         // Check that all mime types are correctly computed.
-        Map<String, Object> properties = RestHelper.fetchDocumentProperties(docId);
-        Map<String, Object> image = (Map) properties.get("custom:image");
+        var doc = restHelper.fetchDocument(docId);
+        var properties = (Map<String, Object>) doc.get("properties");
+        var image = (Map<String, Object>) properties.get("custom:image");
         assertEquals("image/png", image.get("mime-type"));
 
-        Map<String, Map<String, Object>> question = (Map) properties.get("custom:question");
+        var question = (Map<String, Map<String, Object>>) properties.get("custom:question");
         assertEquals("image/png", question.get("image").get("mime-type"));
         assertEquals("audio/mpeg", question.get("audio").get("mime-type"));
 
@@ -279,9 +296,10 @@ public class ITDevHotReloadTest {
         addBlobToDocument(docId, "custom:image", "newImage", "psd");
 
         // Check then the new mime type is correctly computed.
-        properties = RestHelper.fetchDocumentProperties(docId);
-        image = (Map) properties.get("custom:image");
-        question = (Map) properties.get("custom:question");
+        doc = restHelper.fetchDocument(docId);
+        properties = (Map<String, Object>) doc.get("properties");
+        image = (Map<String, Object>) properties.get("custom:image");
+        question = (Map<String, Map<String, Object>>) properties.get("custom:question");
         assertEquals("application/photoshop", image.get("mime-type"));
         assertEquals("audio/mpeg", question.get("audio").get("mime-type"));
         assertNull(question.get("image"));
@@ -290,7 +308,7 @@ public class ITDevHotReloadTest {
     /** @since 11.1 **/
     protected void addBlobToDocument(String docId, String xpath, String fileName, String extension) throws IOException {
         File file = Files.createTempFile(fileName, "." + extension).toFile();
-        RestHelper.operation("Blob.AttachOnDocument", file, Map.of(), Map.of("document", docId, "xpath", xpath));
+        restHelper.operation("Blob.AttachOnDocument", file, Map.of(), Map.of("document", docId, "xpath", xpath));
     }
 
 }
